--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">chat-app-socket</string>
+    <string name="action_logout">Выйти</string>
+    <string name="add_new_chat">Add new chat</string>
 </resources>
